# HysilensDownloader

./: .gitignore  Cargo.toml  README.md  flake.nix
bins/: 7z  hdiffz  hpatchz
common/: Cargo.toml
common/src/: input.rs  lib.rs  md5.rs  utils.rs
common/src/embedded/: hdiffz.rs  hpatchz.rs  mod.rs  sevenz.rs
patcher/: Cargo.toml
patcher/src/: main.rs  utils.rs
patcher/src/options/: mod.rs  verify.rs
patcher/src/options/hdiff/: handler.rs  mod.rs
patcher/src/options/ldiff/: handler.rs  mod.rs
patchmaker/: Cargo.toml
patchmaker/src/: block.rs  main.rs  patch.rs  scan.rs  utils.rs
sophon/: Cargo.toml  build.rs
sophon/protos/: SophonManifestProto.proto  SophonPatchProto.proto
sophon/src/: lib.rs  main.rs  sevenzip.rs  sophon.rs  utils.rs
sophon/src/modules/: chunks.rs  downloader.rs  merger.rs  mod.rs  parser.rs
sophon/src/protos/: sophon_manifest_proto.rs  sophon_patch_proto.rs
