[package]
name = "patcher"
edition.workspace = true
version.workspace = true 

[dependencies]
md5.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
indicatif.workspace = true
rayon.workspace = true

common.workspace = true
sophon.workspace = true