[package]
name = "patchmaker"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
indicatif.workspace = true
md5.workspace = true
walkdir.workspace = true
thiserror.workspace = true
dirs.workspace = true

common.workspace = true
crc32fast = "1.5.0"
